Add clarification to auto_upgrade_buildings_decision_desc regarding upgrade affordability

--- a/localization/english/auto_upgrade_l_english.yml
+++ b/localization/english/auto_upgrade_l_english.yml
@@ -1,3 +1,3 @@
 ﻿l_english:
  auto_upgrade_buildings_decision:0 "Upgrade All Buildings"
- auto_upgrade_buildings_decision_desc:0 "Instantly upgrade all existing buildings in your personally held counties. Checks technology requirements and deducts gold for each upgrade. Only upgrades existing buildings - does not construct new ones."
+ auto_upgrade_buildings_decision_desc:0 "Instantly upgrade all existing buildings in your personally held counties. Checks technology requirements and deducts gold for each upgrade. Only upgrades existing buildings - does not construct new ones.\n\n#weak The preview may show more upgrades than you can actually afford. Gold is spent sequentially, so only as many upgrades as your gold allows will be applied.#!"
